# forumAPI

./: .gitignore
services/auth/: .env.example  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 55aec2d758cd_add_access_token_model_and_initial_user_.py  5a3881730a94_initial_user_model.py
services/auth/src/app/: main.py
services/auth/src/app/actions/: create_superuser.py  set_scope.py
services/auth/src/app/auth/: backend.py  deps.py  manager.py  routers.py
services/auth/src/app/core/: config.py
services/auth/src/app/db/: session.py
services/auth/src/app/models/models/: user.py
services/auth/src/app/models/orm_models/: access_token.py  user.py
services/auth/src/app/models/schemas/: user.py
services/auth/src/app/utilities/: alias_gen.py
services/auth/src/app/utilities/cache/: redis.py
