[project]
name = "auth"
version = "0.1.0"
description = "auth msvc"
authors = [
    {name = "Maniakalochka",email = "prochorwolochoff@gmail.com"}
]
license = {text = "None"}
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "fastapi-users (>=14.0.1,<15.0.0)",
    "fastapi-admin (>=1.0.4,<2.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "fastapi-users-db-sqlalchemy (>=7.0.0,<8.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
redis = "^6.4.0"

